--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,4 +1,6 @@
 spring:
+  aop:
+    proxy-target-class: false
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://localhost:3306/crm?useUnicode=true&characterEncoding-utr-8&useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
