--- a/pom.xml
+++ b/pom.xml
@@ -29,7 +29,11 @@
             <artifactId>spring-boot-starter-aop</artifactId>
             <version>2.2.6.RELEASE</version>
         </dependency>
-
+        <dependency>
+            <groupId>tk.mybatis</groupId>
+            <artifactId>mapper-spring-boot-starter</artifactId>
+            <version>2.1.5</version>
+        </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
