--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,21 +1,21 @@
 spring:
-  kafka:
-    bootstrap-servers: 175.24.87.213:9092
-    listener:
-      concurrency: 10
-      ack-mode: MANUAL_IMMEDIATE
-      poll-timeout: 1500
-    consumer:
-      group-id: test-consumer-group
-      enable-auto-commit: false
-      key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
-      value-deserializer: org.apache.kafka.common.serialization.StringDeserializer
-      properties: {session.timeout.ms: 6000, auto.offset.reset: earliest}
-    producer:
-      key-serializer: org.apache.kafka.common.serialization.StringSerializer
-      value-serializer: org.apache.kafka.common.serialization.StringSerializer
-      batch-size: 65536
-      buffer-memory: 524288
+#  kafka:
+#    bootstrap-servers: 175.24.87.213:9092
+#    listener:
+#      concurrency: 10
+#      ack-mode: MANUAL_IMMEDIATE
+#      poll-timeout: 1500
+#    consumer:
+#      group-id: test-consumer-group
+#      enable-auto-commit: false
+#      key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
+#      value-deserializer: org.apache.kafka.common.serialization.StringDeserializer
+#      properties: {session.timeout.ms: 6000, auto.offset.reset: earliest}
+#    producer:
+#      key-serializer: org.apache.kafka.common.serialization.StringSerializer
+#      value-serializer: org.apache.kafka.common.serialization.StringSerializer
+#      batch-size: 65536
+#      buffer-memory: 524288
 
   aop:
     proxy-target-class: false
@@ -38,5 +38,6 @@ mybatis:
 
 
 logging:
-  level:
-    root: info
+  file:
+#    path: D:\NetEase
+#    name: majia.log
