--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,3 +1,4 @@
+
 spring:
 #  kafka:
 #    bootstrap-servers: 175.24.87.213:9092
@@ -41,3 +42,5 @@ logging:
   file:
 #    path: D:\NetEase
 #    name: majia.log
+server:
+  port: 8081
