--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -24,7 +24,7 @@ spring:
     driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://175.24.87.213:3306/test?useUnicode=true&characterEncoding-utr-8&useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true&allowMultiQueries=true
     username: root1
-    password: 252384
+    password: myq888.ten
 mybatis:
 #  将该路径下的xml文件加载到mybatis中，把接口对应到xml文件上
   mapper-locations: classpath:mapper/*.xml
